2002-08-07  Roland McGrath  <roland@redhat.com>

	* inet/getnetgrent_r.c (endnetgrent, __getnetgrent_r): Actually call
	the static symbols added in the last change (doofus is me).

	* locale/newlocale.c (__newlocale): Use a bit mask instead of a second
	loop to notice missing categories in a composite name.

	* locale/locale.h (LC_CTYPE_MASK, LC_NUMERIC_MASK, LC_TIME_MASK,
	LC_COLLATE_MASK, LC_MONETARY_MASK, LC_MESSAGES_MASK, LC_ALL_MASK,
	LC_PAPER_MASK, LC_NAME_MASK, LC_ADDRESS_MASK, LC_TELEPHONE_MASK,
	LC_MEASUREMENT_MASK, LC_IDENTIFICATION_MASK, LC_ALL_MASK): New macros.

2002-08-07  Ulrich Drepper  <drepper@redhat.com>

	* malloc/tst-calloc.c: Add tests for one or both parameters being zero.

2002-08-07  Roland McGrath  <roland@redhat.com>

	* sysdeps/i386/dl-machine.h (elf_machine_rel): Add to, don't clobber,
	unrelocated initial value for DTPOFF32 and TPOFF32 relocs.
	Reported by Jakub Jelinek  <jakub@redhat.com>.

2002-08-07  Jakub Jelinek  <jakub@redhat.com>

	* malloc/malloc.c (public_cALLOc): Check ELEM_SIZE != 0 before
	division.

2002-08-06  Roland McGrath  <roland@redhat.com>

	* include/getopt.h: Put private decls inside [_GETOPT_H].
	Use libc_hidden_proto for getopt_long, getopt_long_only.
	* posix/getopt1.c [_LIBC]: Include <getopt.h> instead of "getopt.h".
	Add libc_hidden_def.

	* sysdeps/generic/unwind-dw2-fde-glibc.c [_LIBC] (dl_iterate_phdr):
	Define as a macro for __dl_iterate_phdr.

	* inet/getnetgrent_r.c (internal_setnetgrent): Renamed from __ name,
	made static.  Add __ name as a strong alias.
	(internal_endnetgrent): Likewise.
	(internal_getnetgrent_r): Likewise.

	* locale/Versions (libc: GLIBC_2.3): Add all the *_l functions
	with no __ prefix.
	* locale/langinfo.h [__USE_GNU]: Declare nl_langinfo_l.
	* ctype/ctype.h [__USE_GNU]: Add declarations and macros for
	all *_l functions with no __ prefix.
	* wctype/wcfuncs_l.c: Define weak aliases without __ for all fns.
	* ctype/ctype_l.c: Likewise.
	* locale/nl_langinfo.c: Likewise.